Adds another testcase